# wasmCloud

./: .dockerignore  .envrc  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .rustfmt.toml  .travis.yml  ADOPTERS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION_LADDER.md  COOLPEOPLE  Cargo.toml  Chart.yaml  Completions.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  Makefile  Makefile.common  OUT  OWNERS  README.md  RELEASE.md  RELEASE_RUNBOOK.md  RESOURCES.md  ROADMAP.md  SECURITY.md  buf.gen.yaml  clippy.toml  codegen.toml  codegen.yaml  control-interface.smithy  deny.toml  flake.nix  garnix.yaml  go.work  (+10 more)
.archived/: .gitpod.yml  README.md  RESOURCES.md
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.deprecated/: .gitpod.Dockerfile  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
.github/: CODEOWNERS  actionlint.yaml  ct-lint-config.yaml  ct.yaml  dependabot.yml  pull_request_template.md  release.yml  renovate-config.json  renovate.json  stale.yaml  tool-versions.env  wit-tools-versions.env  zizmor.yml
adr/: 0000-use-markdown-architectural-decision-records.md  0001-use-actor-model.md  0002-stateless-actors.md  0003-use-nats-for-lattice.md  0004-enforce-signed-artifacts.md  0005-security-nkeys.md  (+17 more)
blobstore-fs/: .gitignore  Cargo.toml  Makefile  README.md  provider_test_config.toml
blobstore-fs/src/: fs_utils.rs  main.rs
blobstore-fs/tests/: blobstore_fs_test.rs
blobstore-s3/: Cargo.toml  Makefile  README.md  build.rs  codegen.toml  provider_test_config.toml
blobstore-s3/src/: config.rs  lib.rs  main.rs
blobstore-s3/tests/: large_data.rs  storage.rs
codegen/: Cargo.toml  Makefile  README.md  codegen.toml  rustfmt-nightly.toml
codegen/src/: codegen_go.rs  codegen_py.rs  codegen_rust.rs  config.rs  decode_py.rs  decode_rust.rs  docgen.rs  encode_py.rs  encode_rust.rs  error.rs  format.rs  gen.rs  lib.rs  loader.rs  model.rs  model_gen.rs  render.rs  rust_build.rs  rustfmt.rs  validate.rs  wasmbus_model.rs  writer.rs
codegen/templates/: Makefile.interface.hbs  codegen.toml  codegen.toml.hbs  hello.smithy.hbs  ping.smithy.hbs
codegen/templates/rust/: rust.Cargo.toml.hbs  rust.Makefile.hbs  rust.actor.manifest.yaml.hbs  rust.actor.rs.hbs  rust.build.rs.hbs  rust.cargo_config.toml.hbs  rust.gitignore.hbs  rust.lib.rs.hbs
common/: Cargo.toml  README.md
common/src/: conversions.rs  errors.rs  lib.rs  protocol.rs
docgen/: Cargo.toml
docgen/dev/: Dockerfile  build-docker.sh  build-tailwind-css.sh  package.json  update-css.sh
docgen/dev/conf/: tailwind.config.js
docgen/src/: files.rs  lib.rs  render.rs
docgen/templates/: base0.hbs  namespace.hbs
fs/: Cargo.toml  Makefile  README.md
fs/src/: lib.rs
http-client/: Cargo.toml  Makefile  README.md
http-client/src/: http_client.rs  lib.rs
http-server/: Cargo.toml  Cross.toml  Makefile  README.md
http-server/src/: lib.rs
httpclient/: .gitignore  Cargo.toml  Makefile  README.md  provider_test_config.toml
httpclient/src/: main.rs
httpclient/tests/: httpclient_test.rs
httpserver-rs/: Cargo.toml  Makefile  README.md  provider_test_config.toml  settings.md
httpserver-rs/src/: lib.rs  settings.rs
httpserver-rs/tests/: httpserver_test.rs
kv-vault/: .gitignore  Cargo.toml  codegen.toml  run-test.sh
kv-vault/src/: client.rs  config.rs  lib.rs  main.rs
kv-vault/tests/: kv_test.rs
kvredis/: .gitignore  Cargo.toml  Makefile  README.md  provider_test_config.toml
kvredis/src/: main.rs
kvredis/tests/: kv_test.rs
lattice-controller/: Cargo.toml  Makefile  README.md  provider_test_config.toml
lattice-controller/src/: client_cache.rs  main.rs
lattice-controller/tests/: lattice_controller_test.rs
logging/: Cargo.toml  Makefile  README.md
logging/src/: lib.rs
macros/: Cargo.toml  Makefile  README.md
macros/src/: lib.rs
nats/: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  codegen.yaml  provider_test_config.toml
nats-keyvalue/: Cargo.toml
nats-keyvalue/src/: events.rs
nats-keyvalue/tests/: integration.rs
nats-kvcache/: Cargo.toml  README.md
nats-kvcache/src/: kvcache.rs  lib.rs
nats-kvcache/tests/: integration.rs
nats/src/: lib.rs  main.rs  natsprov.rs
nats/tests/: nats_test.rs
redis/: Cargo.toml  Makefile  README.md  codegen.yaml
redis-streams/: Cargo.toml  Makefile
redis-streams/.github/workflows/: rust.yml
redis-streams/src/: lib.rs
redis/.github/workflows/: rust.yml
redis/src/: kvredis.rs  lib.rs
redisgraph/: Cargo.toml  Makefile  README.md
redisgraph/examples/sample-graph-actor/: Cargo.toml  Makefile  README.md
redisgraph/examples/sample-graph-actor/src/: lib.rs
redisgraph/src/: conversions.rs  lib.rs  rgraph.rs
redisgraph/wasccgraph-redis/: README.md
redisgraph/wasccgraph-redis/src/: rgraph.rs
rpc/: Cargo.toml  README.md  codegen.toml
rpc-rs/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  codegen.toml  rustfmt.toml
rpc-rs/examples/: request.rs  sub.rs
rpc-rs/src/: actor_wasm.rs  cbor.rs  channel_log.rs  chunkify.rs  common.rs  core.rs  document.rs  error.rs  lib.rs  otel.rs  provider.rs  provider_main.rs  rpc_client.rs  timestamp.rs  wasmbus_core.rs  wasmbus_model.rs
rpc-rs/tests/: nats_sub.rs
rpc/src/: actor_wasm.rs  common.rs  lib.rs  timestamp.rs
rust/: Cargo.toml
rust/src/: broker.rs  control.rs  events.rs  lib.rs
s3/: Cargo.toml  Cross.toml  Makefile  README.md
s3/src/: lib.rs  s3.rs
sample-graph-actor/: Cargo.toml  Makefile
sample-graph-actor/src/: lib.rs
sqldb-postgres/: Cargo.toml  Makefile  README.md  provider_test_config.toml
sqldb-postgres/examples/: docker-compose.yml  env.sample  init-demo-user.sh
sqldb-postgres/examples/check-uri/: Cargo.toml
sqldb-postgres/examples/check-uri/src/: main.rs
sqldb-postgres/src/: config.rs  error.rs  main.rs  types.rs
sqldb-postgres/tests/: queries.rs
telnet/: Cargo.toml  Makefile  README.md
telnet/src/: lib.rs  server.rs  session.rs
wascc-redisgraph/: .travis.yml  Cargo.toml
wascc-redisgraph/src/: lib.rs  rgraph.rs
(+3694 files in other folders)
