[package]
name = "wasmcloud"
version = "1.6.2"
description = "wasmCloud is a Cloud Native Computing Foundation (CNCF) project that enables teams to build polyglot applications composed of reusable Wasm components and run them—resiliently and efficiently—across any cloud, Kubernetes, datacenter, or edge."
default-run = "wasmcloud"
readme = "README.md"

authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[workspace.package]
authors = ["The wasmCloud Team"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/wasmCloud/wasmCloud"

[badges.maintenance]
status = "actively-developed"

[features]
provider-blobstore-azure = ["dep:wasmcloud-provider-blobstore-azure"]
provider-blobstore-fs = ["dep:wasmcloud-provider-blobstore-fs"]
provider-blobstore-s3 = ["dep:wasmcloud-provider-blobstore-s3"]
provider-http-client = ["dep:wasmcloud-provider-http-client"]
provider-http-server = ["dep:wasmcloud-provider-http-server"]
provider-keyvalue-nats = ["dep:wasmcloud-provider-keyvalue-nats"]
provider-keyvalue-redis = ["dep:wasmcloud-provider-keyvalue-redis"]
provider-keyvalue-vault = ["dep:wasmcloud-provider-keyvalue-vault"]
provider-messaging-kafka = ["dep:wasmcloud-provider-messaging-kafka"]
provider-messaging-nats = ["dep:wasmcloud-provider-messaging-nats"]
provider-sqldb-postgres = ["dep:wasmcloud-provider-sqldb-postgres"]
provider-wadm = ["dep:wasmcloud-provider-wadm"]

wasmcloud = [
    "dep:clap",
    "dep:clap-markdown",
    "dep:nkeys",
    "dep:regex",
    "dep:tracing-subscriber",
    "dep:wascap",
    "dep:wasmcloud-core",
    "dep:wasmcloud-host",
    "dep:wasmcloud-tracing",
]

default = [
    "provider-blobstore-azure",
    "provider-blobstore-fs",
    "provider-blobstore-s3",
    "provider-http-client",
    "provider-http-server",
    "provider-keyvalue-nats",
    "provider-keyvalue-redis",
    "provider-keyvalue-vault",
    "provider-messaging-kafka",
    "provider-messaging-nats",
    "provider-sqldb-postgres",
    "provider-wadm",
    "wasmcloud",
]


[[bin]]
name = "blobstore-azure-provider"
required-features = ["provider-blobstore-azure"]

[[bin]]
name = "blobstore-fs-provider"
required-features = ["provider-blobstore-fs"]

[[bin]]
name = "blobstore-s3-provider"
required-features = ["provider-blobstore-s3"]

[[bin]]
name = "http-server-provider"
required-features = ["provider-http-server"]

[[bin]]
name = "http-client-provider"
required-features = ["provider-http-client"]

[[bin]]
name = "keyvalue-nats-provider"
required-features = ["provider-keyvalue-nats"]

[[bin]]
name = "keyvalue-redis-provider"
required-features = ["provider-keyvalue-redis"]

[[bin]]
name = "keyvalue-vault-provider"
required-features = ["provider-keyvalue-vault"]

[[bin]]
name = "messaging-kafka-provider"
required-features = ["provider-messaging-kafka"]

[[bin]]
name = "messaging-nats-provider"
required-features = ["provider-messaging-nats"]

[[bin]]
name = "wadm-provider"
required-features = ["provider-wadm"]

[[bin]]
name = "sqldb-postgres-provider"
required-features = ["provider-sqldb-postgres"]

[[bin]]
name = "wasmcloud"
required-features = ["wasmcloud"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
wasmcloud-provider-wadm = { workspace = true, optional = true }
anyhow = { workspace = true }
clap = { workspace = true, features = [
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
], optional = true }
clap-markdown = { workspace = true, optional = true }
nkeys = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true } # TODO: revisit the 'release_max_level_info' feature https://github.com/wasmCloud/wasmCloud/issues/468
tracing-subscriber = { workspace = true, optional = true }
wascap = { workspace = true, optional = true }
wasmcloud-core = { workspace = true, features = ["otel"], optional = true }
wasmcloud-host = { workspace = true, optional = true }
wasmcloud-provider-blobstore-azure = { workspace = true, optional = true }
wasmcloud-provider-blobstore-fs = { workspace = true, optional = true }
wasmcloud-provider-blobstore-s3 = { workspace = true, optional = true }
wasmcloud-provider-http-client = { workspace = true, optional = true }
wasmcloud-provider-http-server = { workspace = true, optional = true }
wasmcloud-provider-keyvalue-nats = { workspace = true, optional = true }
wasmcloud-provider-keyvalue-redis = { workspace = true, optional = true }
wasmcloud-provider-keyvalue-vault = { workspace = true, optional = true }
wasmcloud-provider-messaging-kafka = { workspace = true, optional = true }
wasmcloud-provider-messaging-nats = { workspace = true, optional = true }
wasmcloud-provider-sqldb-postgres = { workspace = true, optional = true }
wasmcloud-tracing = { workspace = true, features = ["otel"], optional = true }

[dev-dependencies]
axum = { workspace = true, features = ["query"] }
async-nats = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
nkeys = { workspace = true }
once_cell = { workspace = true }
provider-archive = { workspace = true }
rand = { workspace = true }
redis = { workspace = true, features = [
    "aio",
    "connection-manager",
    "tokio-comp",
] }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rmp-serde = { workspace = true }
rustversion = { workspace = true }
secrets-nats-kv = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
test-components = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tokio-stream = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "ansi",
    "env-filter",
    "fmt",
    "json",
    "std",
] }
url = { workspace = true }
uuid = { workspace = true }
vaultrs = { workspace = true, features = ["rustls"] }
wascap = { workspace = true }
wasmcloud-control-interface = { workspace = true }
wasmcloud-core = { workspace = true, features = [
    "reqwest",
    "rustls-native-certs",
] }
wasmcloud-test-util = { workspace = true }
wrpc-interface-http = { workspace = true, features = ["hyper"] }
wrpc-transport = { workspace = true }
wrpc-transport-nats = { workspace = true }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anstyle = { version = "1.0.10", default-features = false }
anyhow = { version = "1", default-features = false }
assert-json-diff = { version = "2", default-features = false }
async-compression = { version = "0.3", default-features = false }
async-nats = { version = "0.36", default-features = false }
async-trait = { version = "0.1", default-features = false }
aws-config = { version = "1.5", default-features = false }
aws-sdk-s3 = { version = "=1.68", default-features = false } # more recent versions depend on `cbindgen`, using MPL-2.0, not permitted by CNCF
aws-smithy-runtime = { version = "1.7", default-features = false }
axum = { version = "0.7", default-features = false }
axum-server = { version = "0.6", default-features = false }
azure_core = { version = "0.20", default-features = false }
azure_storage = { version = "0.20", default-features = false }
azure_storage_blobs = { version = "0.20", default-features = false }
base64 = { version = "0.22", default-features = false }
bigdecimal = { version = "0.4", default-features = false }
bit-vec = { version = "0.6", default-features = false }
bytes = { version = "1", default-features = false }
cap-std = { version = "3", default-features = false }
cargo_metadata = { version = "0.18", default-features = false }
cargo_toml = { version = "0.15", default-features = false }
cbindgen = { version = "0.25", default-features = false }
chrono = { version = "0.4", default-features = false }
cidr = { version = "0.2", default-features = false }
claims = { version = "0.7", default-features = false }
clap = { version = "4", default-features = false }
clap_complete = { version = "4", default-features = false }
clap-markdown = { version = "0.1.4", default-features = false }
cloudevents-sdk = { version = "0.7", default-features = false }
command-group = { version = "5", default-features = false }
config = { version = "0.14", default-features = false }
console = { version = "0.15", default-features = false }
crossterm = { version = "0.28.1", default-features = false }
data-encoding = { version = "2", default-features = false }
deadpool-postgres = { version = "0.13", default-features = false }
dialoguer = { version = "0.11", default-features = false }
docker_credential = { version = "1.3.1", default-features = false }
etcetera = { version = "0.8", default-features = false }
exponential-backoff = { version = "2.0", default-features = false }
file-guard = { version = "0.2.0", default-features = false }
futures = { version = "0.3", default-features = false }
geo-types = { version = "0.7", default-features = false }
handlebars = { version = "6.3", default-features = false }
heck = { version = "0.5", default-features = false }
hex = { version = "0.4", default-features = false }
http = { version = "1", default-features = false, features = ["std"] }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
humantime = { version = "2", default-features = false }
hyper = { version = "1", default-features = false }
hyper-rustls = { version = "0.27", default-features = false }
hyper-util = { version = "0.1", default-features = false }
ignore = { version = "0.4", default-features = false }
indicatif = { version = "0.17", default-features = false }
kafka = { version = "0.10", default-features = false }
names = { version = "0.14", default-features = false }
nix = { version = "0.29", default-features = false }
nkeys = { version = "0.4", default-features = false }
normpath = { version = "1", default-features = false }
notify = { version = "6", default-features = false }
nuid = { version = "0.5", default-features = false }
num = { version = "0.4", default-features = false }
oci-client = { version = "0.14", default-features = false }
oci-wasm = { version = "0.2.1", default-features = false }
once_cell = { version = "1", default-features = false }
opentelemetry = { version = "0.27", default-features = false }
opentelemetry-appender-tracing = { version = "0.27", default-features = false }
opentelemetry-nats = { version = "0.2.0", path = "./crates/opentelemetry-nats", default-features = false }
opentelemetry-otlp = { version = "0.27", default-features = false }
opentelemetry_sdk = { version = "0.27", default-features = false }
path-absolutize = { version = "3", default-features = false }
path-clean = { version = "1", default-features = false }
pg_bigdecimal = { version = "0.1", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }
postgres-types = { version = "0.2", default-features = false }
provider-archive = { version = "^0.15.0", path = "./crates/provider-archive", default-features = false }
quote = { version = "1", default-features = false }
rand = { version = "0.8", default-features = false }
redis = { version = "0.25", default-features = false }
regex = { version = "1", default-features = false }
reqwest = { version = "0.12", default-features = false }
ring = { version = "0.17", default-features = false }
rmp-serde = { version = "1", default-features = false }
rmpv = { version = "1", default-features = false }
rustls = { version = "0.23.11", default-features = false }
rustls-native-certs = { version = "0.8", default-features = false }
rustls-pemfile = { version = "2", default-features = false }
rustversion = { version = "1.0", default-features = false }
sanitize-filename = { version = "0.4", default-features = false }
secrecy = { version = "0.8", default-features = false }
secrets-nats-kv = { version = "0.1", path = "crates/secrets-nats-kv", default-features = false }
semver = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1", default-features = false }
serde_with = { version = "3", default-features = false }
serde_yaml = { version = "0.9", default-features = false }
serial_test = { version = "3", default-features = false }
sha2 = { version = "0.10", default-features = false }
sysinfo = { version = "0.27", default-features = false }
tempfile = { version = "3", default-features = false }
term-table = { version = "=1.3.2", default-features = false }
termcolor = { version = "1", default-features = false }
termsize = { version = "0.1", default-features = false }
test-case = { version = "3", default-features = false }
test-components = { version = "0", path = "./tests/components", default-features = false }
test-log = { version = "0.2", default-features = false }
testcontainers = { version = "0.23" }
thiserror = { version = "2", default-features = false }
time = { version = "0.3", default-features = false }
tokio = { version = "1", default-features = false }
tokio-postgres = { version = "0.7", default-features = false }
tokio-postgres-rustls = { version = "0.13", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { version = "0.1", default-features = false }
tokio-tar = { version = "0.3", default-features = false }
tokio-util = { version = "0.7", default-features = false }
toml = { version = "0.8", default-features = false }
tower-http = { version = "0.5", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-appender = { version = "0.2", default-features = false }
tracing-flame = { version = "0.2", default-features = false }
tracing-futures = { version = "0.2", default-features = false }
tracing-opentelemetry = { version = "0.28", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false }
ulid = { version = "1", default-features = false }
unicase = { version = "2.8.1", default-features = false }
# We enable default features for URL by default here to help with the no-std
# transition for url. We should be able to remove default features and explicitly
# enable "std" above soon (tm).
#
# see: https://github.com/servo/rust-url/pull/831
url = { version = "2" }
uuid = { version = "1", default-features = false }
vaultrs = { version = "0.7", default-features = false }
wadm = { version = "0.20.2", default-features = false }
wadm-client = { version = "0.8.2", default-features = false }
wadm-types = { version = "0.8.2", default-features = false }
walkdir = { version = "2", default-features = false }
warp = { version = "0.3", default-features = false }
wascap = { version = "^0.15.3", path = "./crates/wascap", default-features = false }
wash = { version = "0.1.0", path = "./crates/wash", default-features = false }
wasi = { version = "0.13.3", default-features = false }
wasm-pkg-client = { version = "0.9.0", default-features = false }
wasm-pkg-core = { version = "0.9.0", default-features = false }
wasi-preview1-component-adapter-provider = { version = "25", default-features = false }
wasm-encoder = { version = "0.224", default-features = false }
wasm-gen = { version = "0.1", default-features = false }
wasmcloud-component = { version = "0", path = "crates/component", default-features = false }
wasmcloud-control-interface = { version = "2.3.0", path = "./crates/control-interface", default-features = false }
wasmcloud-core = { version = "^0.16.0", path = "./crates/core", default-features = false }
wasmcloud-host = { version = "^0.24.0", path = "./crates/host", default-features = false }
wasmcloud-provider-blobstore-azure = { version = "*", path = "./crates/provider-blobstore-azure", default-features = false }
wasmcloud-provider-blobstore-fs = { version = "*", path = "./crates/provider-blobstore-fs", default-features = false }
wasmcloud-provider-blobstore-s3 = { version = "*", path = "./crates/provider-blobstore-s3", default-features = false }
wasmcloud-provider-http-client = { version = "*", path = "./crates/provider-http-client", default-features = false }
wasmcloud-provider-http-server = { version = "^0.26.0", path = "./crates/provider-http-server", default-features = false }
wasmcloud-provider-keyvalue-nats = { version = "*", path = "./crates/provider-keyvalue-nats", default-features = false }
wasmcloud-provider-keyvalue-redis = { version = "*", path = "./crates/provider-keyvalue-redis", default-features = false }
wasmcloud-provider-keyvalue-vault = { version = "*", path = "./crates/provider-keyvalue-vault", default-features = false }
wasmcloud-provider-messaging-kafka = { version = "*", path = "./crates/provider-messaging-kafka", default-features = false }
wasmcloud-provider-messaging-nats = { version = "0.25.0", path = "./crates/provider-messaging-nats", default-features = false }
wasmcloud-provider-sdk = { version = "^0.13.0", path = "./crates/provider-sdk", default-features = false }
wasmcloud-provider-sqldb-postgres = { version = "*", path = "./crates/provider-sqldb-postgres", default-features = false }
wasmcloud-provider-wadm = { version = "*", path = "./crates/provider-wadm", default-features = false }
wasmcloud-runtime = { version = "^0.8.0", path = "./crates/runtime", default-features = false }
wasmcloud-secrets-client = { version = "^0.6.0", path = "./crates/secrets-client", default-features = false }
wasmcloud-secrets-types = { version = "^0.5.0", path = "./crates/secrets-types", default-features = false }
wasmcloud-test-util = { version = "^0.16.0", path = "./crates/test-util", default-features = false }
wasmcloud-tracing = { version = "^0.12.0", path = "./crates/tracing", default-features = false }
wasmparser = { version = "0.225", default-features = false }
wasmtime = { version = "26", default-features = false }
wasmtime-wasi = { version = "26", default-features = false }
wasmtime-wasi-http = { version = "26", default-features = false }
wasmtime-wit-bindgen = { version = "26", default-features = false }
wat = { version = "1", default-features = false }
webpki-roots = { version = "0.26", default-features = false }
which = { version = "4", default-features = false }
wit-bindgen = { version = "0.38.0", default-features = false }
wit-bindgen-core = { version = "0.38.0", default-features = false }
wit-bindgen-go = { version = "0.38.0", default-features = false }
wit-bindgen-wrpc = { version = "0.9", default-features = false }
wit-component = { version = "0.224.1", default-features = false }
wit-parser = { version = "0.224.1", default-features = false }
wrpc-interface-blobstore = { version = "0.21", default-features = false }
wrpc-interface-http = { version = "0.31", default-features = false }
wrpc-runtime-wasmtime = { version = "0.25", default-features = false }
wrpc-transport = { version = "0.28", default-features = false }
wrpc-transport-nats = { version = "0.27.1", default-features = false, features = [
    "async-nats-0_36",
] }

[package.metadata.cargo-machete]
ignored = ["wasmcloud-provider-lattice-controller", "wasmcloud-provider-sdk"]
