[workspace]
resolver = "3"
default-members = ["crates/wash"]
members = [
    "crates/wash-runtime",
    "crates/wash",
]

[workspace.package]
authors = ["The wasmCloud Team"]
edition = "2024"
rust-version = "1.91.0"
version = "2.0.3"

[workspace.lints.rust]
warnings = 'deny' # Treat all warnings as errors
unsafe_code = 'deny'
# Inherited from Wasmtime
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

[workspace.lints.clippy]
unwrap_used = 'deny'
expect_used = 'deny'
panic = 'deny'
indexing_slicing = 'deny'
dbg_macro = 'deny'
join_absolute_paths = 'deny'
needless_collect = 'deny'
option_env_unwrap = 'deny'
panicking_unwrap = 'deny'
serde_api_misuse = 'deny'
transmute_ptr_to_ref = 'deny'
transmute_undefined_repr = 'deny'
trivially_copy_pass_by_ref = 'deny'
uninit_vec = 'deny'
unnecessary_box_returns = 'deny'

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
async-nats = { version = "0.44", default-features = false }
atty = { version= "0.2", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["std"] }
clap = { version = "4.5.40", default-features = false, features = ["derive", "env", "help", "color", "suggestions", "wrap_help", "cargo", "string"] }
clap_complete = { version = "4.5.40", default-features = false }
async-trait = { version = "0.1", default-features = false}
bytes = { version = "1", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "alloc"] }
clap-markdown = { version = "0.1.5", default-features = false }
ctrlc = { version = "3.4.7", default-features = false }
dialoguer = { version = "0.11.0", default-features = false, features = ["editor", "password", "zeroize", "fuzzy-select", "fuzzy-matcher"] }
docker_credential = { version = "1.3.1", default-features = false }
etcetera = { version = "0.10.0", default-features = false }
figment = { version = "0.10.19", default-features = false }
futures = { version = "0.3", default-features = false }
flate2 = { version = "1.0", default-features = false }
hyper = { version = "1.6.0", default-features = false }
hyper-util = { version = "0.1.18", default-features = false }
humantime = { version = "2.3.0" }
k8s-openapi = { version = "0.25", default-features = false }
kube = { version = "1", default-features = false }
kube-derive = { version = "1", default-features = false }
notify = { version = "8.0.0", default-features = false, features = ["macos_fsevent"] }
moka = { version = "0.12", default-features = false }
oci-client = { version = "0.15.0", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots"]}
oci-wasm = { version = "0.3.0", default-features = false, features = ["rustls-tls"] }
opentelemetry = { version = "0.31", default-features = false }
opentelemetry-appender-tracing = { version = "0.31", default-features = false }
opentelemetry-otlp = { version = "0.31", default-features = false }
opentelemetry-http = { version = "0.31", default-features = false }
opentelemetry_sdk = { version = "0.31", default-features = false }
opentelemetry-semantic-conventions = { version = "0.31", default-features = false }
opentelemetry-stdout = { version = "0.31.0", default-features = false }
pbjson = { version = "0.8.0", default-features = false }
pbjson-types = { version = "0.8.0", default-features = false }
pbjson-build = { version = "0.8.0", default-features = false }
prost = { version = "0.14", default-features = false }
redis = { version = "0.27", default-features = false, features = ["tokio-comp"] }
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
rustls-pemfile = { version = "2.2", default-features = false, features = ["std"] }
schemars = { version = "0.8", default-features = false }
git2 = { version = "0.19", default-features = false }
hostname = { version = "0.4", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
names = { version = "0.14", default-features = false }
semver = { version = "1.0.26", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
serde_yaml_ng = { version = "0.9", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tar = { version = "0.4", default-features = false }
tempfile = { version = "3.15.0", default-features = false }
testcontainers = { version = "0.27", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
tonic = { version = "0.14", default-features = false }
tonic-prost = { version = "0.14", default-features = false }
tonic-prost-build = { version = "0.14", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
tracing-opentelemetry = { version = "0.32", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "ansi", "time", "json"] }
url = { version = "2.5", default-features = false }
uuid = { version = "1.17.0", default-features = false }
wasm-pkg-client = { version = "0.10.0", default-features = false }
wasm-pkg-core = { version = "0.10.0", default-features = false }
wasm-metadata = { version = "0.244.0", default-features = false, features = ["oci"] }
wasmcloud = { path = "crates/wasmcloud", default-features = false }
wasmtime = { version = "43", default-features = false }
wasmtime-wasi = { version = "43", default-features = false }
wasmtime-wasi-io = { version = "43", default-features = false }
wasmtime-wasi-http = { version = "43", default-features = false }
wit-component = { version = "0.244.0", default-features = false }
wash-runtime = { path = "crates/wash-runtime", default-features = false }
wat = { version = "1.244.0", default-features = false }

# postgres deps
bigdecimal = { version = "0.4", default-features = false }
bit-vec = { version = "0.6", default-features = false }
cidr = { version = "0.2", default-features = false }
deadpool-postgres = { version = "0.14", default-features = false }
geo-types = { version = "0.7", default-features = false }
pg_bigdecimal = { version = "0.1", default-features = false }
postgres-types = { version = "0.2", default-features = false }
tokio-postgres = { version = "0.7", default-features = false }
tokio-postgres-rustls = { version = "0.13", default-features = false }
ulid = { version = "1", default-features = false }
webpki-roots = { version = "0.26", default-features = false }

# socket deps (used by wash-runtime sockets module)
cap-net-ext = "3.4.4"
cap-std = "3.4.4"
io-lifetimes = { version = "2.0.3", default-features = false }
rustix = "1.0.3"

[workspace.metadata.cargo-machete]
ignored = [
    # Used in build.rs
    "pbjson",
    "pbjson-types",
    "serde",
    # Used for protos
    "tonic",
   "tonic-prost",
]

[patch.crates-io]
# Pinned for async component support (fixes #187). Remove after https://github.com/bytecodealliance/rust-oci-wasm/issues/28
oci-wasm = { git = "https://github.com/bytecodealliance/rust-oci-wasm", rev = "5ee16fa1" }
