[package]
name = "wasmcloud-provider-blobstore-fs"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
atty = "0.2"
tracing = "0.1.36"
wasmcloud-interface-blobstore = "0.4"
wasmbus-rpc = "0.10"
tokio = "1.17.0"
base64 = "0.13"
serde_json = "1.0"
serde = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.5"
tokio = { version = "1.0", features = [ "full" ] }
futures-util = "0.3.23"

[[bin]]
name = "blobstore_fs"
path = "src/main.rs"
