[package]
name = "wasmcloud-provider-blobstore-fs"
version = "0.2.1"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
serde = "1.0"
serde_json = "1.0"
tokio = "1.17.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmbus-rpc = { version = "0.11.2", features = ["otel"] }
wasmcloud-interface-blobstore = "0.5.1"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.6.4"
tokio = { version = "1.0", features = [ "full" ] }
futures-util = "0.3.23"

[[bin]]
name = "blobstore_fs"
path = "src/main.rs"
