[package]
name = "wasmcloud-provider-blobstore-fs"
version = "0.5.1"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
path-clean = "1"
serde = "1.0"
serde_json = "1.0"
tokio = "1.17.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmbus-rpc = { version = "0.14", features = ["otel"] }
wasmcloud-interface-blobstore = "0.8"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.10"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3.23"

[[bin]]
name = "blobstore_fs"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
