[package]
name = "wasmcloud-provider-blobstore-s3"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
aws-sdk-s3 = "0.6.0"
aws-config = "0.6.0"
aws-types = { version = "0.6.0", features=["hardcoded-credentials"] }
aws-smithy-types = "0.36.0"
base64 = "0.13"
bytes = "1.0"
http = "0.2.6"
futures = "0.3"
futures-util = "0.3.21"
log = "0.4"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8"}
tokio-util = { version = "0.7.0", features = ["io"] }
toml = "0.5"
wasmbus-rpc = { path="../../weld/rpc-rs" }
wasmcloud-interface-blobstore = { version="0.1.0", path="../../interfaces/blobstore/rust" }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.2"
rand = "0.8"


[lib]
name = "blobstore_s3_lib"
path = "src/lib.rs"

[[bin]]
name = "blobstore-s3"
path = "src/main.rs"
