[package]
name = "wasmcloud-provider-blobstore-s3"
version = "0.1.4"
edition = "2021"

[dependencies]
async-trait = "0.1"
aws-sdk-s3 = "0.8.0"
aws-config = "0.8.0"
aws-types = { version = "0.8.0", features=["hardcoded-credentials"] }
aws-smithy-types = "0.38.0"
base64 = "0.13"
bytes = "1.0"
http = "0.2.6"
futures = "0.3"
futures-util = "0.3.21"
log = "0.4"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
simple_env_load = "0.2.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8"}
tokio-util = { version = "0.7.0", features = ["io"] }
toml = "0.5"
wasmbus-rpc = "0.8.2"

# test dependencies
[dev-dependencies]
rand = "0.8"
fastrand = "1.7"
crc32fast = "1.3.2"
env_logger = "0.9"
wasmcloud-interface-testing = "0.4.1"
wasmcloud-test-util = "0.3.1"
wasmcloud-interface-blobstore = { version = "0.2.0", path = "../../interfaces/blobstore/rust" }

[build-dependencies]
weld-codegen = "0.4.2"


[lib]
name = "blobstore_s3_lib"
path = "src/lib.rs"

[[bin]]
name = "blobstore-s3"
path = "src/main.rs"

#[workspace]
#members = [ "blobview" ]
